--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
     <string name="app_name">JPMC</string>
 
     <!--DETAILS ACTIVITY-->
-    <string name="test_takers">Number of SAT test takers: </string>
-    <string name="reading_scores">Average Reading Scores: </string>
-    <string name="math_scores">Average Math Scores: </string>
-    <string name="writing_scores">Average Writing Scores: </string>
+    <string name="test_takers">Number of SAT test takers:\u0020</string>
+    <string name="reading_scores">Average Reading Scores:\u0020</string>
+    <string name="math_scores">Average Math Scores:\u0020</string>
+    <string name="writing_scores">Average Writing Scores:\u0020</string>
+    <string name="no_info_available">No Information Available</string>
 
 </resources>
